test/files/neg/t3757.check
B.scala:3: error: method foo overrides nothing
class B extends a.A { override def foo = "B" }
                                   ^
one error found
